# lidar_obstacle_detection

./: .gitignore  README.md
.github/workflows/: mirror.yml
lidar_obstacle_detection/: README.md  package.xml  requirements.txt  setup.py
lidar_obstacle_detection/config/: lidar_cloud_ingress.yaml
lidar_obstacle_detection/launch/: lidar_cloud_ingress.launch.py
lidar_obstacle_detection/lidar_obstacle_detection/: __init__.py  base_link_spatial_filter.py  geometry_utils.py  lidar_cloud_ingress_node.py  obstacle_ros_msgs.py  obstacle_rviz_markers.py  pointcloud_rigid_body.py  ros_qos.py  static_mount_tf.py  surface_obstacle_segmentation.py  temporal_cloud_accumulator.py  verbose_log.py
lidar_obstacle_detection/rviz/: lidar_ingress.rviz
lidar_obstacle_detection_msgs/: CMakeLists.txt  README.md  package.xml
lidar_obstacle_detection_msgs/msg/: Obstacle.msg  ObstacleList.msg
